# ai-production-readiness-kit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_improvement.md  example_proposal.md  scoring_model_proposal.md
.github/workflows/: ci.yml
aipr/: __init__.py  cli.py  comparison.py  gates.py  models.py  remediation.py  rendering.py  report.py  scoring.py  validation.py
aipr/rules/: __init__.py  adoption.py  architecture.py  business_value.py  categories.py  data_readiness.py  evals.py  governance.py  human_in_the_loop.py  observability.py  operations.py  rag_quality.py
aipr/templates/: executive_summary.md.j2  remediation_plan.md.j2  report.md.j2  report_engineering.md.j2  report_executive.md.j2  usecase_blank.yaml
docs/: 01-ai-production-readiness-scorecard.md  02-ai-use-case-intake-template.md  03-human-in-the-loop-decision-tree.md  04-rag-production-checklist.md  05-llm-observability-checklist.md  06-ai-governance-charter.md  07-ai-cost-roi-calculator.md  08-ai-risk-register.md  09-head-of-ai-90-day-plan.md  10-ai-production-readiness-maturity-model.md  11-usecase-yaml-schema.md  12-github-action-usage.md  13-running-ai-readiness-review.md  14-json-output-contracts.md  15-scoring-rationale.md  16-release-process.md  17-github-action-wrapper-plan.md
examples/document-ingestion-quality-monitor/: README.md  report.md  (+1 more)
tests/: test_cli.py  test_comparison.py  test_gates.py  test_remediation.py  test_report_generation.py  test_scoring.py
(+24 files in other folders)
