[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-production-readiness-kit"
version = "0.1.0"
description = "Open-source toolkit for assessing whether an AI workflow is ready for production."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Mihai Badiu" }
]
keywords = [
  "ai",
  "genai",
  "llm",
  "rag",
  "llmops",
  "ai-governance",
  "production-ai"
]
dependencies = [
  "jinja2>=3.1",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8"
]

[project.scripts]
aipr = "aipr.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.hatch.build.targets.wheel]
packages = ["aipr"]
